--- a/core/templates/core/book_list.html
+++ b/core/templates/core/book_list.html
@@ -1,46 +1,9 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+{% extends 'core/index.html' %}
 
-    <title>Тестовый проект</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 10px">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/admin/">Admin</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'core:books' %}">Books</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+{% block title %}{% endblock %}
 
-    <form class="row g-3" method="get">
-      <div class="col-auto">
-        <input type="text" class="form-control" placeholder="Название книги" name="name" value="{{ request.GET.name }}">
-      </div>
-      <div class="col-auto">
-        <button type="submit" class="btn btn-primary mb-3">Поиск</button>
-      </div>
-    </form>
+{% block content %}
+    {% include 'core/book_list_form_include.html' %}
 
     <table class="table">
       <thead>
@@ -62,8 +25,4 @@
         {% endfor %}
       </tbody>
     </table>
-
-
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  </body>
-</html>
+{% endblock %}
