--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
-    <title>Тестовый проект</title>
+    <title>{{ title }}</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -33,8 +33,13 @@
       </div>
     </nav>
 
-    <h1>Главная страница</h1>
+    {% block title %}
+        {% if title %}
+            <h1>{{ title }}</h1>
+        {% endif %}
+    {% endblock %}
 
+    {% block content %}{% endblock %}
 
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   </body>
