работа с формами + реализация базовых классов создания / редактирвования / удаления объектов

--- a/core/templates/core/book_list.html
+++ b/core/templates/core/book_list.html
@@ -18,11 +18,17 @@
             <tr>
               <th scope="row">{{ forloop.counter }}</th>
               <td>
-                  <a href="{% url 'core:book_detail' book.id %}">{{ book.name }}</a>
+                  <a href="{% url 'core:book_update' book.id %}">{{ book.name }}</a>
               </td>
               <td>{{ book.pages|default:'-' }}</td>
             </tr>
         {% endfor %}
       </tbody>
     </table>
+
+    <p>
+        <a href="{% url 'core:book_create' %}" class="btn btn-success">
+            Добавить
+        </a>
+    </p>
 {% endblock %}
