--- a/core/templates/core/book_list_form_include.html
+++ b/core/templates/core/book_list_form_include.html
@@ -1,8 +1,10 @@
-<form class="row g-3" method="get">
-  <div class="col-auto">
-    <input type="text" class="form-control" placeholder="Название книги" name="name" value="{{ request.GET.name }}">
-  </div>
-  <div class="col-auto">
-    <button type="submit" class="btn btn-primary mb-3">Поиск</button>
-  </div>
+{% load bootstrap5 %}
+
+
+<form class="row g-3" method="get" style="margin-top: 10px">
+    {% bootstrap_form filters.form layout='horizontal' %}
+
+    <div class="col-auto">
+        <button type="submit" class="btn btn-primary mb-3">Поиск</button>
+    </div>
 </form>
